--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>site	</title>
-</head>
-<body>
-class site
-</body>
+	<head>
+	   <meta charset="UTF-8">
+	   <title>社大網頁設計 15號</title>
+    </head>
+    <body>
+	      <h1>這是我的第一個網站</h1>
+	      <p>希望內容越來越充實</p>
+    </body>
 </html>
