--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 	<head>
 	   <meta charset="UTF-8">
-	   <title>社大網頁設計 15號</title>
+	   <title>大成教室網頁設計 15號</title>
     </head>
     <body>
 	      <h1>這是我的第一個網站</h1>
 	      <p>希望內容越來越充實</p>
+	      <p>希望大家互相學習<p>
     </body>
 </html>
