--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>大成學員	</title>
+  <meta charset="UTF-8">
+  <title>自定義列表3-4</title>
 </head>
 <body>
-	<h1>這是我的一個網站h1>
-		<h2>test20170322</h2>
-			<h3>test2017/03h3</h3>
-					<h4>中文gfghh4</h4>
-<pre>
-roidenLorem ipsum dolor sit amet, consectetur      adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure    dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur.    Excepteur sint occaecat cupidatat non
-pt, sunt in culpa qui officia   deserunt mollit anim id est laborum.
-</pre>	
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br\>
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minimeniam,<br\>
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo<br\>
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse<br\>
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>				
+ 
+  <dl>
+    <dt>咖啡</dt>
+    <dd>黑色的飲料</dd>
+    <dt>牛奶</dt>
+    <dd>白色的飲料</dd>
+  </dl>
+   
 </body>
 </html>
