--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>自定義列表3-4</title>
+  <title>有序列表的屬性3-5</title>
 </head>
 <body>
- 
-  <dl>
-    <dt>咖啡</dt>
-    <dd>黑色的飲料</dd>
-    <dt>牛奶</dt>
-    <dd>白色的飲料</dd>
-  </dl>
+   
+  <ol type="A">
+    <li>蘋果</li>
+    <li>香蕉</li>
+    <li>橘子</li>
+    <li>水蜜桃</li>
+  </ol>
+  <ol type="a">
+    <li>蘋果</li>
+    <li>香蕉</li>
+    <li>橘子</li>
+    <li>水蜜桃</li>
+  </ol>
+  <ol type="I">
+    <li>蘋果</li>
+    <li>香蕉</li>
+    <li>橘子</li>
+    <li>水蜜桃</li>
+  </ol>
+  <ol type="i">
+    <li>蘋果</li>
+    <li>香蕉</li>
+    <li>橘子</li>
+    <li>水蜜桃</li>
+  </ol>
+  <ol start="6">
+    <li>蘋果</li>
+    <li>香蕉</li>
+    <li>橘子</li>
+    <li>水蜜桃</li>
+  </ol>
    
 </body>
 </html>
