--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
    
   <ol type="A">
-  <big></big>
-    <li>蘋果</li>
+  
+    <li><big>蘋果</big></li>
     <li>香蕉</li>
     <li>橘子</li>
     <li>水蜜桃</li>
