--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
    
   <ol type="A">
   
-    <li><big>蘋果</big></li>
-    <li>香蕉</li>
+   <big> <li>蘋果</li></big>
     <li>橘子</li>
     <li>水蜜桃</li>
   </ol>
