--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <li><big>水蜜桃</big></li>
   </ol>
   <ol type="I">
-    <li>蘋果</li>
+  <i>  <li>蘋果</li>
     <li>香蕉</li>
     <li>橘子</li>
-    <li>水蜜桃</li>
+    <li>水蜜桃</li></i>
   </ol>
   <ol type="i">
     <li>蘋果</li>
