--- a/index.html
+++ b/index.html
@@ -1,41 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>有序列表的屬性3-5</title>
+	<meta charset="UTF-8">
+	<title>聯結練習</title>
 </head>
 <body>
-   
-  <ol type="A">
-  
-   <big> <li>蘋果</li></big>
-    <li>橘子</li>
-    <big><li>水蜜桃</li></big>
-  </ol>
-  <ol type="a">
-    <li>蘋果</li>
-    <li>香蕉</li>
-    <li>橘子</li>
-    <li><big>水蜜桃</big></li>
-  </ol>
-  <ol type="I">
-  <i>  <li>蘋果</li>
-    <li>香蕉</li>
-    <li>橘子</li>
-    <li>水蜜桃</li></i>
-  </ol>
-  <ol type="i">
-    <li>蘋果</li>
-    <li>香蕉</li>
-    <li>橘子</li>
-    <li>水蜜桃</li>
-  </ol>
-  <ol start="6">
-    <li>蘋果</li>
-    <li>香蕉</li>
-    <li>橘子</li>
-    <li>水蜜桃</li>
-  </ol>
-   
+	<ul>
+<li>	<a href="img/ex5.png" target="_blank">顯示圖片</a></li>
+	<li><a href="https://www.youtube.com/watch?v=kH9NpwyINLg target="_blank">迪氏尼卡通</a></li>
+	<li><a href="5-2.html" target="_blank">練習5-2</a>
+	</li>
+	</ul>
 </body>
-</html>
