--- a/5-2.html
+++ b/5-2.html
@@ -15,5 +15,6 @@
   <p>練習5-2</p>
   <div>練習5-2</div><div>練習5-2</div>  
   <span>練習5-2</span><span>練習5-2</span>
+  <a href="index.html"><div>回首頁</div></a>
 </body>
 </html>
