--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 	<ul>
-<li>	<a href="img/ex51.png" target="_blank">顯示圖片</a></li>
+<li>	<a href="img/ex5.png" target="_blank">顯示圖片</a></li>
 	<li><a href="https://www.youtube.com/watch?v=kH9NpwyINLg target="_blank">迪氏尼卡通</a></li>
+	
 	<li><a href="5-2.html" target="_blank">練習5-2</a>
 	</li>
+	<li><a href="5-1.html" target="_blank">練習5-1</a>
+	</li>
+	
+	
 	</ul>
 </body>
