--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 	
 	<li><a href="5-5.html" target="_blank">練習5-5 padding練習</a>
 	</li>
+	<li><a href="7-2.html" target="_blank">練習7-2 構圖練習</a>
+	</li>
 	</ul>
 </body>
