--- a/ex1.html
+++ b/ex1.html
@@ -16,18 +16,12 @@
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="js/jquery.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h1>台南社大網頁設計期中聚餐調查</h1>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrBT9FfwJjyrQYfgkTfo1vvhRd1FfSyY8EkLY6VTFWGAzmfQ/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0" style="width:100%;height:1700px;">載入中…</iframe>
-    </div>
-    <div class="container">
-    <iframe src="https://docs.google.com/spreadsheets/d/1RDsWtjqb-2oquF0AL_UBHTts-YX_G6hzJY5JGK87V1I/pubhtml?gid=1661558958&amp;single=true&amp;widget=true&amp;headers=false"style="width:100%;height:300px></iframe>
-    </div>
+    <h1>你好，世界！</h1>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
