--- a/creative/petanque99index.html
+++ b/creative/petanque99index.html
@@ -72,7 +72,7 @@
     <header class="top-content">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">本網頁由美國麻省理工學院免費提供</h1>
+                <h1 id="homeHeading">本網頁由美國麻省理工學院免費授權使用</h1>
                 <!-- <hr> -->
                 <p>尊重原創；首張照片保留。本網頁純測試用；若有侵權請告知。</p>
                 
