--- a/creative/index.html
+++ b/creative/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content=" https://benson2210penny.github.io/site/creative/index.html">
     <meta property="og:image" content="https://benson2210penny.github.io/site/creative/img/portfolio/fullsize/3.jpg">
     <meta property="og:description" content="榴槤PC專賣店" >
-    <meta property="og:type" content="article" >
+    <meta property="og:type" content="website" >
     <title>榴槤PC好吃水果專賣店</title>
 
     <!-- Bootstrap Core CSS -->
