--- a/creative/index.html
+++ b/creative/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="學員">
     <meta name="keywords" content="榴槤PC,西瓜PC,鳳梨PC,荔枝PC">
-    <meta name="description" content=""榴槤PC好吃水果專賣店，訂購專線(日)06-595-8399、(夜)06-213-7399(行動)0916-055888、0970-426888，台南市大市場內">
+    <meta name="description" content="榴槤PC好吃水果專賣店，訂購專線(日)06-595-8399、(夜)06-213-7399(行動)0916-055888、0970-426888，台南市大市場內">
     <meta name="robots" content="index,follow">
     <meta name="rating" content="general">
     <meta name="author" content="好吃工作室">
