--- a/creative/jinpetanque.html
+++ b/creative/jinpetanque.html
@@ -111,17 +111,17 @@
         </div>
     </section>
 
-    <section id="services">
+    <!-- <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center"> -->
                     <!-- <h2 class="section-heading">At Your Service</h2> -->
                     <!-- <hr class="primary"> -->
-                </div>
+                <!-- </div>
             </div>
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row"> -->
                 <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
@@ -143,16 +143,16 @@
                         <p class="text-muted">We update dependencies to keep things fresh.</p>
                     </div>
                 </div> -->
-                <div class="col-lg-3 col-md-6 text-center">
+                <!-- <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i> -->
                         <!-- <h3>Made with Love</h3>
                         <p class="text-muted">You have to make your websites with love these days!</p> -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
