--- a/creative/index.html
+++ b/creative/index.html
@@ -105,7 +105,9 @@
                     <!-- <h2 class="section-heading">We've got what you need!</h2> -->
                     <!-- <hr class="light"> -->
                    <!--  <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p> -->
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">感恩</a>
+                   <!--  <a href="#services" class="page-scroll btn btn-default btn-xl sr-button"></a> -->
+                    <div class="fb-like" data-href="https://benson2210penny.github.io/site/" data-width="400" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -328,6 +330,15 @@
           , "img/13.jpg"
           ], {duration: 3000, fade: 750});
        });
+     </script>
+     <div id="fb-root"></div>
+     <script>(function(d, s, id) {
+           var js, fjs = d.getElementsByTagName(s)[0];
+           if (d.getElementById(id)) return;
+           js = d.createElement(s); js.id = id;
+           js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.9&appId=723374327865924";
+           fjs.parentNode.insertBefore(js, fjs);
+         }(document, 'script', 'facebook-jssdk'));
      </script>
 
 </body>
